<resources>
    <string name="app_name">TodoList</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sort_options">Sort</string>
    <string name="title_activity_settings">Settings</string>

    <string name="empty_view">There\'s nothing here...</string>

    <!-- Dialog Strings -->
    <string name="dialog_title">Title:</string>
    <string name="sample_title">Luncheon</string>
    <string name="dialog_desc">Description:</string>
    <string name="sample_desc">Bring plates!</string>
    <string name="add_event_button">Add Event</string>
    <string name="add_event_list_button">Add TodoList</string>
    <string name="sample_time">Choose Time</string>
    <string name="sample_date">Choose Date</string>
    <string name="edit_event">Edit</string>
    <string name="delete_event">Delete</string>
    <string name="confirm_prompt">Are you sure?</string>
    <string name="confirm_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_event">New Event</string>
    <string name="add_event_list">New TodoList</string>
    <string name="edit_event_save">Save</string>
    <string name="calendar_dialog_title">Time and Date</string>
    <string name="select_reminder">Select a reminder type:</string>
    <string-array name="reminder_options_array">
        <item>None</item>
        <item>One Time</item>
        <item>Repeated</item>
        <item>Location</item>
    </string-array>
    <string name="repeat_dialog_title">Repeat Options</string>
    <string name="select_repeat_type">Repeat Type</string>
    <string-array name="repeat_options_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>Hourly</item>
    </string-array>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string-array name="monthly_options_array">
        <item>Day of the Week</item>
        <item>Specific Date</item>
    </string-array>
    <!-- Sort Dialog -->
    <string name="sort_title">Sort by:</string>
    <string-array name="sort_options_array">
        <item>Title</item>
        <item>Reminder</item>
        <item>Reverse</item>
    </string-array>


    <!-- Toast Messages -->
    <string name="unknown_error">Something went wrong...</string>
    <string name="calendar_error">Invalid Date and/or Time</string>
    <string name="title_error">Invalid Title</string>
    <string name="no_days_selected_error">No Days Selected</string>
    <string name="short_duration_interval_error">Invalid Interval</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
